feat: support position descendants filter
